--- a/index.html
+++ b/index.html
@@ -4,23 +4,176 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serpent's Vault - Budget Tracker</title>
-  <!-- Add Tailwind CSS (needed for your styling) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Add React and ReactDOM -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <!-- Add Babel for JSX support -->
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  
+  <!-- Add Tailwind CSS for styling -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  
+  <style>
+    body {
+      background-color: #111827;
+      color: #e5e7eb;
+    }
+    .budget-app {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .app-header {
+      background-color: #065f46;
+      border: 1px solid #059669;
+      border-radius: 0.5rem;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+    .app-title {
+      color: #6ee7b7;
+      font-size: 1.875rem;
+      font-weight: bold;
+    }
+    .app-subtitle {
+      color: #34d399;
+      font-style: italic;
+    }
+    .tab-container {
+      border-bottom: 1px solid #059669;
+      margin-bottom: 1.5rem;
+    }
+    .tab {
+      padding: 0.5rem 1rem;
+      font-weight: 500;
+      cursor: pointer;
+    }
+    .tab.active {
+      background-color: #065f46;
+      color: #6ee7b7;
+      border-bottom: 2px solid #6ee7b7;
+    }
+    .tab:not(.active) {
+      color: #9ca3af;
+    }
+    .tab:not(.active):hover {
+      color: #6ee7b7;
+    }
+    .card {
+      background-color: #1f2937;
+      border: 1px solid #065f46;
+      border-radius: 0.5rem;
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+    .card-title {
+      color: #6ee7b7;
+      font-size: 1.25rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
+    .stat-grid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 1rem;
+    }
+    @media (min-width: 768px) {
+      .stat-grid {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+    .stat-card {
+      background-color: #374151;
+      border: 1px solid #065f46;
+      border-radius: 0.375rem;
+      padding: 1rem;
+    }
+    .stat-label {
+      font-size: 0.875rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 0.5rem;
+    }
+    .stat-value {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    .income-label { color: #6ee7b7; }
+    .income-value { color: #6ee7b7; }
+    .bills-label { color: #fcd34d; }
+    .bills-value { color: #fcd34d; }
+    .expenses-label { color: #f87171; }
+    .expenses-value { color: #f87171; }
+    .balance-label { color: #c4b5fd; }
+    .balance-value-positive { color: #6ee7b7; }
+    .balance-value-negative { color: #f87171; }
+    .progress-container {
+      width: 100%;
+      background-color: #374151;
+      height: 0.5rem;
+      border-radius: 9999px;
+      margin-top: 0.25rem;
+    }
+    .progress-bar {
+      height: 0.5rem;
+      border-radius: 9999px;
+      background-color: #059669;
+    }
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 1rem;
+    }
+    @media (min-width: 768px) {
+      .form-grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+    .form-label {
+      display: block;
+      font-size: 0.875rem;
+      font-weight: 500;
+      margin-bottom: 0.25rem;
+      color: #d1d5db;
+    }
+    .form-input, .form-select {
+      width: 100%;
+      background-color: #374151;
+      border: 1px solid #4b5563;
+      border-radius: 0.25rem;
+      padding: 0.5rem;
+      color: white;
+    }
+    .btn {
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      font-weight: 500;
+      cursor: pointer;
+    }
+    .btn-green {
+      background-color: #047857;
+      color: white;
+    }
+    .btn-green:hover {
+      background-color: #065f46;
+    }
+    .btn-yellow {
+      background-color: #b45309;
+      color: white;
+    }
+    .btn-yellow:hover {
+      background-color: #92400e;
+    }
+    .btn-red {
+      background-color: #b91c1c;
+      color: white;
+    }
+    .btn-red:hover {
+      background-color: #991b1b;
+    }
+  </style>
 </head>
 <body>
-  <div id="root"></div>
-  
-  <!-- Your React component -->
-  <script type="text/babel" src="app.js"></script>
-  
-  <!-- Mount your React component -->
-  <script type="text/babel">
-    ReactDOM.render(<BudgetApp />, document.getElementById('root'));
-  </script>
-</body>
-</html>
+  <div class="budget-app">
+    <!-- Header -->
+    <div class="app-header flex justify-between items-center">
+      <div>
+        <h1 class="app-title">Serpent's Vault</h1>
+        <p class="app-subtitle">Master your finances with cunning</p>
+      </div>
+      <button class
