--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
     <!-- Header -->
     <div class="app-header flex justify-between items-center">
       <div>
-        <h1 class="app-title">Serpent's Vault</h1>
-        <p class="app-subtitle">Master your finances with cunning</p>
+        <h1 class="app-title">Ashley's Vault</h1>
+        <p class="app-subtitle">Master your finances with SMOOSH <3</p>
       </div>
       <button class="bg-gray-800 hover:bg-gray-700 text-green-300 py-2 px-4 rounded border border-green-500" onclick="showActivityLog()">
         Activity Log
