--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serpent's Vault - Budget Tracker</title>
+  <title>Vault - Budget Tracker</title>
   
   <!-- Add Tailwind CSS for styling -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -326,7 +326,7 @@
       </svg>
     </div>
     
-    <h1 class="login-title">Serpent's Vault</h1>
+    <h1 class="login-title">Vault</h1>
     
     <div id="login-form" class="login-form">
       <div>
@@ -351,8 +351,8 @@
     <!-- Header -->
     <div class="app-header flex justify-between items-center">
       <div>
-        <h1 class="app-title">Serpent's Vault</h1>
-        <p class="app-subtitle">Master your finances with cunning</p>
+        <h1 class="app-title">Vault</h1>
+        <p class="app-subtitle"></p>
       </div>
       <div class="flex space-x-2">
         <div id="user-email" class="text-white self-center mr-4"></div>
