--- a/index.html
+++ b/index.html
@@ -566,6 +566,43 @@
       background-color: #4b5563;
       color: white;
     }
+
+    /* Styling for notes */
+    .note-text {
+      font-size: 0.875rem;
+      color: #9ca3af;
+      max-width: 250px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    /* Styling for savings category */
+    .savings-amount {
+      color: #93c5fd !important;
+    }
+
+    .savings-card {
+      background-color: #1e3a8a;
+      border: 1px solid #3b82f6;
+      border-radius: 0.375rem;
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .savings-label {
+      color: #93c5fd;
+      font-size: 0.875rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 0.5rem;
+    }
+
+    .savings-value {
+      color: #93c5fd;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
